sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:5: error: '(' expected but identifier found.
      if plusPetit(j,j+1){
         ^AlgBubbleSort1:8: error: illegal start of simple expression
    } 
    ^